--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "element-plus": "^2.2.28",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
